# packages/openapi/api/src/models/Provider.ts
@@ -84,6 +84,12 @@ export interface Provider {
   readonly defaultPlan: Plan | null
   /**
    *
+   * @type {string}
+   * @memberof Provider
+   */
+  defaultPlanId?: string | null
+  /**
+   *
    * @type {number}
    * @memberof Provider
    */
@@ -166,6 +172,9 @@ export function ProviderFromJSONTyped(
       ? undefined
       : json['invoice_logo_url'],
     defaultPlan: PlanFromJSON(json['default_plan']),
+    defaultPlanId: !exists(json, 'default_plan_id')
+      ? undefined
+      : json['default_plan_id'],
     trialDays: !exists(json, 'trial_days') ? undefined : json['trial_days'],
     isCardRequired: !exists(json, 'is_card_required')
       ? undefined
@@ -199,6 +208,7 @@ export function ProviderToJSON(value?: Provider | null): any {
     home_url: value.homeUrl,
     webhook_url: value.webhookUrl,
     invoice_logo_url: value.invoiceLogoUrl,
+    default_plan_id: value.defaultPlanId,
     trial_days: value.trialDays,
     is_card_required: value.isCardRequired,
     support_email: value.supportEmail,
